--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,5 +1,5 @@
 # Messages. Made with ❤ by frafol.
-# For support: discord.io/futuredevelopment
+# For support: https://discord.com/invite/sTSwaGBCdC
 
 messages:
 
